# amof

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  atom.py  bad.py  cn.py  coordination.py  elastic.py  msd.py  plot.py  pyproject.toml  rdf.py  requirements.txt  symbols.py  trajectory.py
amof/: __init__.py  atom.py  bad.py  cn.py  msd.py  plot.py  rdf.py  structure.py  symbols.py  trajectory.py
amof/coordination/: __init__.py  buildingunits.py  core.py  reduce.py  zif.py
amof/elastic/: __init__.py  core.py  elate.py
amof/files/: __init__.py  molsys.py
amof/pore/: __init__.py  core.py
amof/ring/: __init__.py  core.py
amof/ring/template/: options
amof/tests/: __init__.py
coordination/: __init__.py  buildingunits.py  core.py  customsearchtwo.py  reduce.py  symbols.py  zif.py
elastic/: core.py
examples/: Compute structural properties.py  Elastic constants and mechanical properties.py  Identify building units of ZIF-4.py  README.md
examples/.ipynb_checkpoints/: Compute structural properties-checkpoint.py
examples/files/: ZIF-4.xyz  toy_trajectory.cell
files/: cp2k.py  molsys.py  operation.py  path.py
pore/: core.py  pysimmzeopp.py
ring/: core.py
ring/template/: input.inp  options
rings/: __init__.py  core.py
sadi/coordination/: __init__.py  buildingunits.py  reduce.py
sadi/elastic/: __init__.py  core.py
sadi/files/: lammps.py
sadi/pore/: __init__.py  pysimmzeopp.py
sadi/ring/: core.py
