[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amof"
description = 'A python package to analyze Molecular Dynamics (MD) trajectories of amorphous Metal-Organic Frameworks (MOFs). '
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Nicolas Castel", email = "nicolas.castel@chimieparistech.psl.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
"ase~=3.20.1",
"atomman",
"joblib",
"matplotlib",
"networkx",
"numpy",
"pandas",
"pymatgen",
"requests",
"scipy",
"xarray~=0.19.0",
]
dynamic = ["version"]

[project.optional-dependencies]
rdf = [
  "asap3",
]
graphics = [
  "bokeh",
  "CairoSVG",
  "holoviews",
  "hvplot",
  "selenium",
]


[project.urls]
Documentation = "https://github.com/casteln/amof#readme"
Issues = "https://github.com/casteln/amof/issues"
Source = "https://github.com/casteln/amof"

[tool.hatch.version]
path = "amof/__init__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=amof --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "amof/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
